# cfg-tools

./: README.md  pyproject.toml
.github/workflows/: quality.yml
cfg_tools/: __init__.py  data_parser.py  utils.py
cfg_tools/plugins/: __init__.py  env.py  interpolation.py
tests/: test_add_plugin.py  test_env.py  test_interpolation.py
