[tool.poetry]
name = "cfg-tools"
version = "0.3.1"
description = "Config tools"
authors = ["bdvllrs <bdvllrs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cfg_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
pyyaml = "^6.0.1"
rich = "^13.9.4"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
types-setuptools = "^69.1.0.20240223"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.7.4"
mypy = "^1.13.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    ".github",
]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
